[package]
name = "everscale-jrpc-client"
edition = "2021"
version = "0.5.0"

[dependencies]
anyhow = "1"
thiserror = "1.0"
futures = "0.3.23"
tracing = "0.1.37"
parking_lot = "0.12.0"
rand = "0.8.5"
reqwest = { version = ">=0.11.10", features = ["gzip", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1.20.1", features = ["full"] }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false }

itertools = "0.10.5"

everscale-jrpc-models = { path = "../models" }
base64 = "0.13.1"
hex = "0.4.3"

[dev-dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4.3"
tracing-subscriber = { version = "0.3",features= ["env-filter"] }


[features]
default = ["log"]
log = ["tracing/log"]
unstable = ["ton_block/venom"]