[package]
name = "everscale-rpc-client"
edition = "2021"
version = "0.6.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13.1"
futures = "0.3.23"
hex = "0.4.3"
itertools = "0.11.0"
parking_lot = "0.12.0"
rand = "0.8.5"
reqwest = { version = ">=0.11.10", features = ["gzip", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
simd-json = { version = "0.10.3", optional = true }
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-proto = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false }

everscale-rpc-models = { path = "../models" }

[dev-dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["log"]
log = ["tracing/log"]
simd = ["dep:simd-json"]
