[package]
name = "everscale-rpc-models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum-core = "0.3"
http = "0.2"
http-body = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", branch = "feature/l2-methods", default-features = true }
nekoton-proto = { git = "https://github.com/broxus/nekoton.git", branch = "feature/l2-methods", default-features = true }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git", branch = "feature/l2-methods", default-features = true }

[dev-dependencies]
serde_json = "1.0.121"

