[package]
name = "everscale-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11"

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }

everscale-jrpc-models = { path = "../models" }

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
bincode = "1.3"
borsh = "0.10"
criterion = "0.4.0"
lz4 = "1.24"
lz4_flex = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.9.2"
zstd = "0.12"

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

everscale-jrpc-models = { path = "../models" }

[[bench]]
name = "bincode"
harness = false

[[bench]]
name = "borsh"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "proto"
harness = false

[[bench]]
name = "simd_json"
harness = false
