[package]
name = "everscale-rpc-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0", features = ["http2"] }
bytes = "1.4.0"
prost = "0.11"
tracing = "0.1.37"

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

[build-dependencies]
prost-build = "0.11"
