[package]
name = "everscale-jrpc-server"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
arc-swap = { version = "1.6", features = ["weak"] }
axum = { version = "0.6.0", features = ["http2"] }
axum-jrpc = { version = "0.5.1", features = ["serde_json"] }
base64 = "0.13"
fdlimit = "0.2.1"
num_cpus = "1.13.1"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
rlimit = "0.9.1"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tower = "0.4.12"
tower-http = { version = "0.4.0", features = ["cors", "timeout"] }
tracing = "0.1.37"
weedb = { version = "0.1", features = ["zstd", "lz4", "jemalloc"] }

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

everscale-jrpc-models = { path = "../models" }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["rt"] }
async-trait = "0.1.58"

[features]
default = ["compression"]
compression = ["tower-http/compression-gzip"]
