[package]
name = "everscale-rpc-server"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arc-swap = { version = "1.6", features = ["weak"] }
axum = { version = "0.6.0", features = ["http2", "ws"] }
axum-jrpc = { version = "0.5.1", features = ["serde_json"] }
base64 = "0.13"
bincode = "1.3"
broxus-util = { version = "0.2", default-features = false }
bytes = "1.4.0"
fdlimit = "0.2.1"
futures-util = "0.3"
hex = "0.4"
humantime = "2.1"
num_cpus = "1.13.1"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
rlimit = "0.9.1"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tower = "0.4.12"
tower-http = { version = "0.4.0", features = ["cors", "timeout"] }
tracing = "0.1.37"
metrics = "0.22.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
weedb = { version = "0.1", features = ["zstd", "lz4", "jemalloc"] }

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-proto = { git = "https://github.com/broxus/nekoton.git", default-features = false }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

everscale-rpc-models = { path = "../models" }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["rt"] }
async-trait = "0.1.58"

[features]
default = ["compression"]
compression = ["tower-http/compression-gzip"]
